--- a/src/app/layout/componentes/banner-contenido-2/banner-contenido-2.component.html
+++ b/src/app/layout/componentes/banner-contenido-2/banner-contenido-2.component.html
@@ -1,5 +1,5 @@
 <section
-  class="bg-cover h-[400px] bg-no-repeat text-right bg-[url('assets/images/banner-2.png')] bg-gray-700 my-10"
+  class="full-width-container bg-cover h-[400px] bg-no-repeat text-right bg-[url('assets/images/banner-2.png')] bg-gray-700 my-10"
 >
   <div class="px-10 py-24 sm:w-1/2 text-center sm:ml-[50%]">
     <h3
