--- a/src/app/layout/componentes/feature-2/feature-2.component.html
+++ b/src/app/layout/componentes/feature-2/feature-2.component.html
@@ -2,8 +2,8 @@
 <div class="grid grid-cols-1 md:grid-cols-4 my-10">
   <div class="p-8">
     <div class="text-center text-[100px] font-titulo">1</div>
-    <h2 class="uppercase mt-6 text-gray-700 font-medium mb-3">
-      Social conversations
+    <h2 class="uppercase text-3xl mt-6 text-gray-700 font-medium mb-3">
+      ESTUDIO JURÍDICO
     </h2>
     <p class="font-light text-sm text-gray-500 mb-3">
       We get insulted by others, lose trust for those others. We get back
@@ -12,8 +12,8 @@
   </div>
   <div class="p-8 sm:border-l sm:border-gray-700">
     <div class="text-center text-[100px] font-titulo">2</div>
-    <h2 class="uppercase mt-6 text-gray-700 font-medium mb-3">
-      Social conversations
+    <h2 class="uppercase text-3xl mt-6 text-gray-700 font-medium mb-3">
+      LEGAL MARKETING
     </h2>
     <p class="font-light text-sm text-gray-500 mb-3">
       We get insulted by others, lose trust for those others. We get back
@@ -22,8 +22,8 @@
   </div>
   <div class="p-8 sm:border-l sm:border-gray-700">
     <div class="text-center text-[100px] font-titulo">3</div>
-    <h2 class="uppercase mt-6 text-gray-700 font-medium mb-3">
-      Social conversations
+    <h2 class="uppercase text-3xl mt-6 text-gray-700 font-medium mb-3">
+      LEGAL MARKETING
     </h2>
     <p class="font-light text-sm text-gray-500 mb-3">
       We get insulted by others, lose trust for those others. We get back
@@ -32,8 +32,8 @@
   </div>
   <div class="p-8 sm:border-l sm:border-gray-700">
     <div class="text-center text-[100px] font-titulo">4</div>
-    <h2 class="uppercase mt-6 text-gray-700 font-medium mb-3">
-      Social conversations
+    <h2 class="uppercase text-3xl mt-6 text-gray-700 font-medium mb-3">
+      DATE BASE
     </h2>
     <p class="font-light text-sm text-gray-500 mb-3">
       We get insulted by others, lose trust for those others. We get back
