--- a/src/app/layout/componentes/services-2/services-2.component.html
+++ b/src/app/layout/componentes/services-2/services-2.component.html
@@ -11,7 +11,7 @@
     <div class="text-[100px] flex justify-center items-center font-titulo">
       <img src="assets/images/icons/icon-1.png" class="w-16 h-16" alt="" />
     </div>
-    <h2 class="uppercase text-gray-700 text-lg font-medium mb-3">Tributario</h2>
+    <h2 class="text-gray-700 text-xl font-medium mb-3">Tributario</h2>
     <p class="font-light text-base text-gray-500 mb-3">
       It is a long established fact that a reader will be distracted by the
       readable content of a page when
@@ -22,7 +22,7 @@
     <div class="text-[100px] flex justify-center items-center font-titulo">
       <img src="assets/images/icons/icon-2.png" class="w-16 h-16" alt="" />
     </div>
-    <h2 class="uppercase text-gray-700 text-lg font-medium mb-3">Tributario</h2>
+    <h2 class="text-gray-700 text-xl font-medium mb-3">Corporativo</h2>
     <p class="font-light text-base text-gray-500 mb-3">
       It is a long established fact that a reader will be distracted by the
       readable content of a page when
@@ -33,7 +33,7 @@
     <div class="text-[100px] flex justify-center items-center font-titulo">
       <img src="assets/images/icons/icon-3.png" class="w-16 h-16" alt="" />
     </div>
-    <h2 class="uppercase text-gray-700 text-lg font-medium mb-3">Tributario</h2>
+    <h2 class="text-gray-700 text-xl font-medium mb-3">Administrativo</h2>
     <p class="font-light text-base text-gray-500 mb-3">
       It is a long established fact that a reader will be distracted by the
       readable content of a page when
@@ -47,7 +47,7 @@
     <div class="text-[100px] flex justify-center items-center font-titulo">
       <img src="assets/images/icons/icon-4.png" class="w-16 h-16" alt="" />
     </div>
-    <h2 class="uppercase text-gray-700 text-lg font-medium mb-3">Tributario</h2>
+    <h2 class="text-gray-700 text-xl font-medium mb-3">Laboral</h2>
     <p class="font-light text-base text-gray-500 mb-3">
       It is a long established fact that a reader will be distracted by the
       readable content of a page when
@@ -58,18 +58,20 @@
     <div class="text-[100px] flex justify-center items-center font-titulo">
       <img src="assets/images/icons/icon-5.png" class="w-16 h-16" alt="" />
     </div>
-    <h2 class="uppercase text-gray-700 text-lg font-medium mb-3">Tributario</h2>
+    <h2 class="text-gray-700 text-xl font-medium mb-3">Tributario</h2>
     <p class="font-light text-base text-gray-500 mb-3">
       It is a long established fact that a reader will be distracted by the
       readable content of a page when
     </p>
-    <a href="#" class="text-base text-red-700">VER MAS</a>
+    <a href="#" class="text-base text-red-700">Contrataciones con el Estado</a>
   </div>
   <div class="p-8 text-center sm:border-l sm:border-gray-700">
     <div class="text-[100px] flex justify-center items-center font-titulo">
       <img src="assets/images/icons/icon-6.png" class="w-16 h-16" alt="" />
     </div>
-    <h2 class="uppercase text-gray-700 text-lg font-medium mb-3">Tributario</h2>
+    <h2 class="text-gray-700 text-xl font-medium mb-3">
+      Funciones y Adquisiciones
+    </h2>
     <p class="font-light text-base text-gray-500 mb-3">
       It is a long established fact that a reader will be distracted by the
       readable content of a page when
@@ -83,7 +85,7 @@
     <div class="text-[100px] flex justify-center items-center font-titulo">
       <img src="assets/images/icons/icon-7.png" class="w-16 h-16" alt="" />
     </div>
-    <h2 class="uppercase text-gray-700 text-lg font-medium mb-3">Tributario</h2>
+    <h2 class="text-gray-700 text-xl font-medium mb-3">Inmobiliaria</h2>
     <p class="font-light text-base text-gray-500 mb-3">
       It is a long established fact that a reader will be distracted by the
       readable content of a page when
@@ -94,7 +96,9 @@
     <div class="text-[100px] flex justify-center items-center font-titulo">
       <img src="assets/images/icons/icon-8.png" class="w-16 h-16" alt="" />
     </div>
-    <h2 class="uppercase text-gray-700 text-lg font-medium mb-3">Tributario</h2>
+    <h2 class="text-gray-700 text-xl font-medium mb-3">
+      Litigios y Controversias
+    </h2>
     <p class="font-light text-base text-gray-500 mb-3">
       It is a long established fact that a reader will be distracted by the
       readable content of a page when
@@ -105,7 +109,7 @@
     <div class="text-[100px] flex justify-center items-center font-titulo">
       <img src="assets/images/icons/icon-9.png" class="w-16 h-16" alt="" />
     </div>
-    <h2 class="uppercase text-gray-700 text-lg font-medium mb-3">Tributario</h2>
+    <h2 class="text-gray-700 text-xl font-medium mb-3">Legal Compliance</h2>
     <p class="font-light text-base text-gray-500 mb-3">
       It is a long established fact that a reader will be distracted by the
       readable content of a page when
@@ -119,7 +123,7 @@
     <div class="text-[100px] flex justify-center items-center font-titulo">
       <img src="assets/images/icons/icon-10.png" class="w-16 h-16" alt="" />
     </div>
-    <h2 class="uppercase text-gray-700 text-lg font-medium mb-3">Tributario</h2>
+    <h2 class="text-gray-700 text-xl font-medium mb-3">Datos Personales</h2>
     <p class="font-light text-base text-gray-500 mb-3">
       It is a long established fact that a reader will be distracted by the
       readable content of a page when
@@ -130,7 +134,9 @@
     <div class="text-[100px] flex justify-center items-center font-titulo">
       <img src="assets/images/icons/icon-11.png" class="w-16 h-16" alt="" />
     </div>
-    <h2 class="uppercase text-gray-700 text-lg font-medium mb-3">Tributario</h2>
+    <h2 class="text-gray-700 text-xl font-medium mb-3">
+      Protección al Consumidor
+    </h2>
     <p class="font-light text-base text-gray-500 mb-3">
       It is a long established fact that a reader will be distracted by the
       readable content of a page when
@@ -141,7 +147,9 @@
     <div class="text-[100px] flex justify-center items-center font-titulo">
       <img src="assets/images/icons/icon-12.png" class="w-16 h-16" alt="" />
     </div>
-    <h2 class="uppercase text-gray-700 text-lg font-medium mb-3">Tributario</h2>
+    <h2 class="text-gray-700 text-xl font-medium mb-3">
+      Propiedad Intelectual
+    </h2>
     <p class="font-light text-base text-gray-500 mb-3">
       It is a long established fact that a reader will be distracted by the
       readable content of a page when
