--- a/src/app/layout/componentes/services-2/services-2.component.html
+++ b/src/app/layout/componentes/services-2/services-2.component.html
@@ -1,6 +1,6 @@
 <div class="mx-10 sm:mx-40 mx-auto px-4 my-10">
   <h2
-    class="text-5xl text-gray-700 font-semibold mb-4 font-subtitulo border-b-8 inline border-yellow-400"
+    class="text-5xl text-gray-700 font-semibold mb-4 leading-tight font-subtitulo border-b-8 inline border-yellow-400"
   >
     NUESTROS SERVICIOS
   </h2>
