--- a/src/app/layout/componentes/carousel-owl-2/carousel-owl-2.component.html
+++ b/src/app/layout/componentes/carousel-owl-2/carousel-owl-2.component.html
@@ -8,7 +8,7 @@
           >
             <div class="absolute inset-0">
               <img
-                class="h-full w-full rounded-xl object-cover shadow-xl shadow-black/40"
+                class="h-full w-full rounded-xl object-cover"
                 src="assets/images/socio_1.png"
               />
             </div>
@@ -26,7 +26,7 @@
           >
             <div class="absolute inset-0">
               <img
-                class="h-full w-full rounded-xl object-cover shadow-xl shadow-black/40"
+                class="h-full w-full rounded-xl object-cover"
                 src="assets/images/socio_2.png"
               />
             </div>
@@ -44,7 +44,7 @@
           >
             <div class="absolute inset-0">
               <img
-                class="h-full w-full rounded-xl object-cover shadow-xl shadow-black/40"
+                class="h-full w-full rounded-xl object-cover"
                 src="assets/images/socio_3.png"
               />
             </div>
@@ -62,7 +62,7 @@
           >
             <div class="absolute inset-0">
               <img
-                class="h-full w-full rounded-xl object-cover shadow-xl shadow-black/40"
+                class="h-full w-full rounded-xl object-cover"
                 src="assets/images/socio_4.png"
               />
             </div>
