--- a/src/app/layout/componentes/section-form-1/section-form-1.component.html
+++ b/src/app/layout/componentes/section-form-1/section-form-1.component.html
@@ -17,8 +17,8 @@
   </div>
 
   <!-- Columna 2 -->
-  <div class="sm:col-span-8 px-24">
-    <form class="mx-auto mx-10">
+  <div class="sm:col-span-8 pl-24">
+    <form class="mx-auto ml-10">
       <div class="mb-5">
         <input
           type="text"
