--- a/src/app/layout/componentes/navbar-dropdown/navbar-dropdown.component.html
+++ b/src/app/layout/componentes/navbar-dropdown/navbar-dropdown.component.html
@@ -34,7 +34,7 @@
       <ul
         class="flex flex-col font-medium p-4 md:p-0 mt-4 text-2xl border-gray-100 rounded-lg bg-gray-50 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700"
       >
-        <li class="border-r border-gray-900 px-10 pb-4 pt-2">
+        <li class="border-r border-gray-900 pr-14 pl-24 pb-4 pt-2">
           <a
             href="#"
             class="block py-2 px-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 md:dark:text-blue-500 dark:bg-blue-600 md:dark:bg-transparent"
@@ -43,7 +43,7 @@
             <img src="assets/images/icons/lupa.png" class="w-5 h-5" alt="" />
           </a>
         </li>
-        <li class="px-2 pb-4 pt-2">
+        <li class="px-4 pb-4 pt-2">
           <a
             href="#"
             class="block py-2 px-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 md:dark:text-blue-500 dark:bg-blue-600 md:dark:bg-transparent"
@@ -52,7 +52,7 @@
           >
         </li>
 
-        <li class="px-2 pb-4 pt-2">
+        <li class="px-4 pb-4 pt-2">
           <button
             id="dropdownNavbarLink1"
             data-dropdown-toggle="dropdownNavbar1"
@@ -101,7 +101,7 @@
             </ul>
           </div>
         </li>
-        <li class="px-2 pb-4 pt-2">
+        <li class="px-4 pb-4 pt-2">
           <button
             id="dropdownNavbarLink2"
             data-dropdown-toggle="dropdownNavbar2"
@@ -150,7 +150,7 @@
             </ul>
           </div>
         </li>
-        <li class="px-2 pb-4 pt-2">
+        <li class="px-4 pb-4 pt-2">
           <button
             id="dropdownNavbarLink3"
             data-dropdown-toggle="dropdownNavbar3"
@@ -248,7 +248,7 @@
             </ul>
           </div>
         </li>
-        <li class="pr-5 pb-2 pt-2">
+        <li class="pr-24 pb-2 pt-2">
           <button
             id="dropdownNavbarLink5"
             data-dropdown-toggle="dropdownNavbar5"
