--- a/src/app/layout/componentes/subtitulo-parrafo-1/subtitulo-parrafo-1.component.html
+++ b/src/app/layout/componentes/subtitulo-parrafo-1/subtitulo-parrafo-1.component.html
@@ -1,4 +1,4 @@
-<div class="mx-10 sm:mx-40 mx-auto px-4 my-10">
+<div class="px-4 my-10">
   <h2
     class="text-5xl text-gray-700 font-semibold mb-4 leading-tight font-subtitulo border-b-8 inline border-yellow-400"
   >
