cambiando subtitulo servicio

--- a/src/app/layout/componentes/services-2/services-2.component.html
+++ b/src/app/layout/componentes/services-2/services-2.component.html
@@ -11,7 +11,9 @@
     <div class="text-[100px] flex justify-center items-center font-titulo">
       <img src="assets/images/icons/icon-1.png" class="w-16 h-16" alt="" />
     </div>
-    <h2 class="text-gray-700 text-xl font-medium mb-3">Tributario</h2>
+    <h2 class="text-gray-700 text-xl font-medium mb-3">
+      Propiedad Intelectual
+    </h2>
     <p class="font-light text-base text-gray-500 mb-3">
       It is a long established fact that a reader will be distracted by the
       readable content of a page when
