--- a/src/app/layout/componentes/banner-contenido-1/banner-contenido-1.component.html
+++ b/src/app/layout/componentes/banner-contenido-1/banner-contenido-1.component.html
@@ -8,7 +8,7 @@
       SOLUCIONES LEGALES CON CRITERIO E INNOVACIÓN
     </h3>
     <h3
-      class="mb-4 text-xl tracking-tight font-parrafo leading-none text-justify text-white md:text-2xl lg:text-2xl"
+      class="mb-4 text-sm sm:text-lg tracking-tight font-parrafo leading-none text-justify text-white md:text-xl lg:text-2xl"
     >
       It is a long established fact that a reader will <br />be distracted by
       the readable content of a page when looking at its layout. The point of
