--- a/src/app/layout/componentes/services-2/services-2.component.html
+++ b/src/app/layout/componentes/services-2/services-2.component.html
@@ -1,6 +1,6 @@
-<div class="mx-10 sm:mx-40 mx-auto px-4 my-10">
+<div class="mx-auto px-4 my-10">
   <h2
-    class="text-5xl text-gray-700 font-semibold mb-4 leading-tight font-subtitulo border-b-8 inline border-yellow-400"
+    class="text-4xl text-gray-700 font-semibold mb-4 leading-tight font-subtitulo border-b-8 inline border-yellow-400"
   >
     NUESTROS SERVICIOS
   </h2>
@@ -18,7 +18,7 @@
       It is a long established fact that a reader will be distracted by the
       readable content of a page when
     </p>
-    <a href="#" class="text-base text-red-700">VER MAS</a>
+    <a href="#" class="text-base text-[#0e0f12]">VER MAS</a>
   </div>
   <div class="p-8 text-center sm:border-l sm:border-gray-700">
     <div class="text-[100px] flex justify-center items-center font-titulo">
@@ -29,7 +29,7 @@
       It is a long established fact that a reader will be distracted by the
       readable content of a page when
     </p>
-    <a href="#" class="text-base text-red-700">VER MAS</a>
+    <a href="#" class="text-base text-[#0e0f12]">VER MAS</a>
   </div>
   <div class="p-8 text-center sm:border-l sm:border-gray-700">
     <div class="text-[100px] flex justify-center items-center font-titulo">
@@ -40,7 +40,7 @@
       It is a long established fact that a reader will be distracted by the
       readable content of a page when
     </p>
-    <a href="#" class="text-base text-red-700">VER MAS</a>
+    <a href="#" class="text-base text-[#0e0f12]">VER MAS</a>
   </div>
 </div>
 <hr class="border-1 border-gray-500" />
@@ -54,7 +54,7 @@
       It is a long established fact that a reader will be distracted by the
       readable content of a page when
     </p>
-    <a href="#" class="text-base text-red-700">VER MAS</a>
+    <a href="#" class="text-base text-[#0e0f12]">VER MAS</a>
   </div>
   <div class="p-8 text-center sm:border-l sm:border-gray-700">
     <div class="text-[100px] flex justify-center items-center font-titulo">
@@ -65,7 +65,9 @@
       It is a long established fact that a reader will be distracted by the
       readable content of a page when
     </p>
-    <a href="#" class="text-base text-red-700">Contrataciones con el Estado</a>
+    <a href="#" class="text-base text-[#0e0f12]"
+      >Contrataciones con el Estado</a
+    >
   </div>
   <div class="p-8 text-center sm:border-l sm:border-gray-700">
     <div class="text-[100px] flex justify-center items-center font-titulo">
@@ -78,7 +80,7 @@
       It is a long established fact that a reader will be distracted by the
       readable content of a page when
     </p>
-    <a href="#" class="text-base text-red-700">VER MAS</a>
+    <a href="#" class="text-base text-[#0e0f12]">VER MAS</a>
   </div>
 </div>
 <hr class="border-1 border-gray-500" />
@@ -92,7 +94,7 @@
       It is a long established fact that a reader will be distracted by the
       readable content of a page when
     </p>
-    <a href="#" class="text-base text-red-700">VER MAS</a>
+    <a href="#" class="text-base text-[#0e0f12]">VER MAS</a>
   </div>
   <div class="p-8 text-center sm:border-l sm:border-gray-700">
     <div class="text-[100px] flex justify-center items-center font-titulo">
@@ -105,7 +107,7 @@
       It is a long established fact that a reader will be distracted by the
       readable content of a page when
     </p>
-    <a href="#" class="text-base text-red-700">VER MAS</a>
+    <a href="#" class="text-base text-[#0e0f12]">VER MAS</a>
   </div>
   <div class="p-8 text-center sm:border-l sm:border-gray-700">
     <div class="text-[100px] flex justify-center items-center font-titulo">
@@ -116,7 +118,7 @@
       It is a long established fact that a reader will be distracted by the
       readable content of a page when
     </p>
-    <a href="#" class="text-base text-red-700">VER MAS</a>
+    <a href="#" class="text-base text-[#0e0f12]">VER MAS</a>
   </div>
 </div>
 <hr class="border-1 border-gray-500" />
@@ -130,7 +132,7 @@
       It is a long established fact that a reader will be distracted by the
       readable content of a page when
     </p>
-    <a href="#" class="text-base text-red-700">VER MAS</a>
+    <a href="#" class="text-base text-[#0e0f12]">VER MAS</a>
   </div>
   <div class="p-8 text-center sm:border-l sm:border-gray-700">
     <div class="text-[100px] flex justify-center items-center font-titulo">
@@ -143,7 +145,7 @@
       It is a long established fact that a reader will be distracted by the
       readable content of a page when
     </p>
-    <a href="#" class="text-base text-red-700">VER MAS</a>
+    <a href="#" class="text-base text-[#0e0f12]">VER MAS</a>
   </div>
   <div class="p-8 text-center sm:border-l sm:border-gray-700">
     <div class="text-[100px] flex justify-center items-center font-titulo">
@@ -156,6 +158,6 @@
       It is a long established fact that a reader will be distracted by the
       readable content of a page when
     </p>
-    <a href="#" class="text-base text-red-700">VER MAS</a>
+    <a href="#" class="text-base text-[#0e0f12]">VER MAS</a>
   </div>
 </div>
