--- a/src/app/layout/componentes/subtitulo-parrafo-2/subtitulo-parrafo-2.component.html
+++ b/src/app/layout/componentes/subtitulo-parrafo-2/subtitulo-parrafo-2.component.html
@@ -1,8 +1,8 @@
 <div class="mx-auto px-4 my-10">
   <h2
-    class="text-5xl text-gray-700 font-semibold mb-4 leading-tight font-subtitulo border-b-8 inline border-yellow-400"
+    class="text-4xl text-gray-700 font-semibold mb-4 leading-tight font-subtitulo border-b-8 inline border-yellow-400"
   >
-    NUESTROS EQUIPO
+    NUESTRO EQUIPO
   </h2>
   <p
     class="mb-2 font-parrafo text-gray-800 text-lg sm:text-2xl mt-10 text-justify"
