--- a/src/app/layout/componentes/section-form-1/section-form-1.component.html
+++ b/src/app/layout/componentes/section-form-1/section-form-1.component.html
@@ -3,7 +3,7 @@
   <!-- Columna 1 -->
   <div class="sm:col-span-4 p-4">
     <h2
-      class="text-5xl text-gray-700 font-semibold mb-4 leading-tight font-subtitulo border-b-8 inline border-yellow-400"
+      class="text-4xl text-gray-700 font-semibold mb-4 leading-tight font-subtitulo border-b-8 inline border-yellow-400"
     >
       CONTÁCTE CON NOSOTROS
     </h2>
@@ -23,7 +23,7 @@
         <input
           type="text"
           id="email"
-          class="bg-[#f3f3f3] p-5 text-gray-500 text-xl block w-full p-2.5 dark:placeholder-gray-400 border-white dark:text-white"
+          class="bg-[#f3f3f3] p-5 text-gray-100 text-xl block w-full p-2.5 placeholder-gray-300 border-white"
           placeholder="NOMBRE COMPLETO"
           required
         />
@@ -32,7 +32,7 @@
         <input
           type="email"
           id="email"
-          class="bg-[#f3f3f3] p-5 text-gray-500 text-xl block w-full p-2.5 dark:placeholder-gray-400 border-white dark:text-white"
+          class="bg-[#f3f3f3] p-5 text-gray-100 text-xl block w-full p-2.5 placeholder-gray-300 border-white"
           placeholder="CORREO ELECTRÓNICO"
           required
         />
@@ -41,7 +41,7 @@
         <input
           type="text"
           id="email"
-          class="bg-[#f3f3f3] p-5 text-gray-500 text-xl block w-full p-2.5 dark:placeholder-gray-400 border-white dark:text-white"
+          class="bg-[#f3f3f3] p-5 text-gray-100 text-xl block w-full p-2.5 placeholder-gray-300 border-white"
           placeholder="TELÉFONO"
           required
         />
@@ -50,7 +50,7 @@
         <input
           type="text"
           id="email"
-          class="bg-[#f3f3f3] p-5 text-gray-500 text-xl block w-full p-2.5 dark:placeholder-gray-400 border-white dark:text-white"
+          class="bg-[#f3f3f3] p-5 text-gray-100 text-xl block w-full p-2.5 placeholder-gray-300 border-white"
           placeholder="ASUNTO"
           required
         />
@@ -59,13 +59,13 @@
         <textarea
           id="message"
           rows="4"
-          class="block p-2.5 w-full text-xl text-gray-500 bg-[#f3f3f3] p-5 dark:placeholder-gray-400 border-white dark:text-white"
+          class="block p-2.5 w-full text-xl text-gray-100 bg-[#f3f3f3] p-5 placeholder-gray-300 border-white"
           placeholder="MENSAJE"
         ></textarea>
       </div>
       <button
         type="submit"
-        class="text-white bg-yellow-300 hover:bg-yellow-200 focus:ring-4 focus:outline-none focus:ring-yellow-300 font-medium text-xl w-full sm:w-auto px-5 py-2.5 text-center"
+        class="text-white bg-yellow-300 hover:bg-yellow-200 focus:ring-4 focus:outline-none focus:ring-yellow-300 font-medium text-3xl w-full sm:w-auto px-7 py-3.5 text-center rounded-md"
       >
         ENVIAR
       </button>
